Offline Pages: Add Model Load Time UMA.

Since many offline pages API calls now wait for the model to be loaded,
we want to characterize the amount of time it can take.

BUG=607573

Review-Url: https://codereview.chromium.org/1950423006
Cr-Commit-Position: refs/heads/master@{#392237}

Former-commit-id: 97d87bb593370ec0a9f92437bfe7c7ee08c8409b